--- a/LICENSE.rdoc
+++ b/LICENSE.rdoc
@@ -1,8 +1,8 @@
 = LICENCE
 
-Copyright 2009–2011 Austin Ziegler
+Copyright 2009–2012 Austin Ziegler
 
-Based on work copyright 2008–2010 Ryan Bates
+Initially based on work copyright 2008–2010 Ryan Bates
 
 Permission is hereby granted, free of charge, to any person obtaining a copy of
 this software and associated documentation files (the "Software"), to deal in
